catkin_ws/logs/backend/build.make.1000.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:283:53: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < frame.getKeypoints3D().size();i++)
                                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:289:50: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i< frame.getKeypoints().size();i++)
                                                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:298:38: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if ((slam.getBadFrameCounter() == badFrameCnt)&&(slam.getNoTrafoFoundCounter() == noTrafoCnt)&&(currentFrame.getId() > 0))
                                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:298:86: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if ((slam.getBadFrameCounter() == badFrameCnt)&&(slam.getNoTrafoFoundCounter() == noTrafoCnt)&&(currentFrame.getId() > 0))
                                                                                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:298:100: error: ‘currentFrame’ was not declared in this scope
    if ((slam.getBadFrameCounter() == badFrameCnt)&&(slam.getNoTrafoFoundCounter() == noTrafoCnt)&&(currentFrame.getId() > 0))
                                                                                                    ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
